cadastro de novos usuarios e aplicando criptografia na senha antes de salvar

--- a/src/main/resources/templates/usuario/cadastro.html
+++ b/src/main/resources/templates/usuario/cadastro.html
@@ -58,6 +58,8 @@
 									<option value="2">Médico</option>
 									<option value="3">Paciente</option>
 								</select>
+								
+								<input type="hidden" value="0" name="perfis">
 
 								<div class="invalid-feedback">Pelo menos um perfil é requerido.</div>
 							</div>
