--- a/src/main/resources/templates/medico/cadastro.html
+++ b/src/main/resources/templates/medico/cadastro.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.w3.org/1999/xhtml" xmlns:th="http://www.w3.org/1999/xhtml"
-	layout:decorate="~{layout}">
+<html xmlns:layout="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.w3.org/1999/xhtml" layout:decorate="~{layout}">
 <head>
 <meta charset="UTF-8" />
 </head>
@@ -8,8 +8,8 @@
 
 	<section class="layout-content" layout:fragment="corpo">
 		<main role="main">
-		
-		<section class="jumbotron text-center">			
+
+		<section class="jumbotron text-center">
 			<img class="d-block mx-auto" th:src="@{/image/spring-security.png}"
 				width="72" height="72">
 			<div class="container">
@@ -23,55 +23,60 @@
 
 				<div class="d-flex justify-content-center">
 					<div class="col-md-8">
-					
+
 						<div th:replace="fragments/alert  :: alerta-sucesso"></div>
-						
-						<form th:action="${medico.id == null} ? @{/medicos/salvar} : @{/medicos/editar}"
-							  th:object="${medico}"	method="POST" class="was-validated">
+
+						<div class="add-toast position-absolute" aria-live="polite"
+							aria-atomic="true" style="top: 0px; right: 20px;">
+							<!--toast-->
+						</div>
+
+						<form
+							th:action="${medico.id == null} ? @{/medicos/salvar} : @{/medicos/editar}"
+							th:object="${medico}" method="POST" class="was-validated">
 							<div class="form-row">
 								<div class="form-group col-md-6">
-									<label for="nome" class="form-group">Nome Completo</label>
-									<input type="text" class="form-control"
-										th:field="*{nome}" id="nome" placeholder="João da Silva"
-										required/>
+									<label for="nome" class="form-group">Nome Completo</label> <input
+										type="text" class="form-control" th:field="*{nome}" id="nome"
+										placeholder="João da Silva" required />
 									<div class="invalid-feedback">Nome completo é requerido.</div>
 								</div>
 							</div>
 							<div class="form-row">
 								<div class="form-group col-md-6">
-									<label for="crm">Inscrição CRM</label> 
-									<input type="text" class="form-control" id="crm" placeholder="000000"
+									<label for="crm">Inscrição CRM</label> <input type="text"
+										class="form-control" id="crm" placeholder="000000"
 										th:field="*{crm}" required />
 									<div class="invalid-feedback">CRM é requerido.</div>
 								</div>
 								<div class="form-group col-md-6">
-									<label for="dtInscricao">Data da Inscrição</label> 
-									<input
+									<label for="dtInscricao">Data da Inscrição</label> <input
 										type="date" class="form-control" id="dtInscricao"
 										th:field="*{dtInscricao}" required />
-									<div class="invalid-feedback">Data de Inscrição CRM é requerida.</div>	
+									<div class="invalid-feedback">Data de Inscrição CRM é
+										requerida.</div>
 								</div>
 							</div>
 
-							
+
 
 							<div id="especialidades-selecionadas">
 								<div class="form-group">
 									<label for="autocomplete-especialidades">Especialidade(s)</label>
 									<input type="text" id="autocomplete-especialidades"
-										class="form-control" placeholder="suas especialidade são..." /> 
+										class="form-control" placeholder="suas especialidade são..." />
 									<small class="form-text text-muted">Insira suas
 										especialidades médicas.</small>
-										
+
 								</div>
-							</div>							
+							</div>
 							<div id='listaEspecializacoes'>
-								<input type="hidden" name="especialidades" value=""/>
-							</div>							
-							
+								<input type="hidden" name="especialidades" value="" />
+							</div>
+
 							<input type="hidden" name="uid" th:field="*{usuario.id}">
 							<input type="hidden" name="id" th:field="*{id}">
-														
+
 							<div class="form-group row">
 								<div class="col-sm-10">
 									<button type="submit" class="btn btn-primary"
@@ -85,7 +90,7 @@
 						<hr />
 
 						<h2>Especialidades médicas</h2>
-						<table id="table-medico-especializacao" 
+						<table id="table-medico-especializacao"
 							class="table table-sm table-striped table-bordered nowrap"
 							style="width: 100%">
 							<thead class="thead-dark">
@@ -102,9 +107,9 @@
 		</div>
 
 		</main>
-		
+
 	</section>
-	<script	th:src="@{/js/medico.js(v=${version})}"	th:fragment="js"></script>
+	<script th:src="@{/js/medico.js(v=${version})}" th:fragment="js"></script>
 	<script th:inline="javascript" th:fragment="inlinescript"></script>
 </body>
 </html>
