recurso remember-me

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -64,7 +64,7 @@
 		</div>
 
 		<div class="checkbox mb-3">
-			<label> <input type="checkbox" value="remember-me">
+			<label> <input type="checkbox" id="remember-me" name="remember-me"><!-- valor remember para o id e name garantem que o spring guarde a seção quando o check box for selecionado -->
 				Remember me
 			</label>
 		</div>
